# VoxFusion

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  cli_start.py  gui_start.py  pyproject.toml
.scratchpad/: plan.md  research.md
assets/: voxfusion.icns
coordination/: tasks.jsonl
coordination/reviews/: 2026-03-16-record-audio-mode.md
coordination/state/: codex.md
docs/: ARCHITECTURE.md  BINARY_BUILD.md  MULTI_AGENT_PROCESS.md  QUICK_START_RU.md  README.md  STREAMING_GUIDE_RU.md  TASKS.md
prompts/: summarize_transcript.md
scripts/: build_binaries.py  make_icon.py
src/voxfusion/: __init__.py  __main__.py  asr_catalog.py  exceptions.py  logging.py  version.py
src/voxfusion/asr/: __init__.py  base.py  breeze_engine.py  dedup.py  factory.py  faster_whisper.py  gigaam_engine.py  openvino_engine.py  parakeet_engine.py  streaming.py
src/voxfusion/capture/: __init__.py  base.py  coreaudio.py  enumerator.py  factory.py  file_source.py  mixer.py  pulseaudio.py  vad_chunker.py  wasapi.py  windows_audio.py  windows_factory.py
src/voxfusion/cli/: __init__.py  capture_cmd.py  config_cmd.py  devices_cmd.py  formatting.py  main.py  models_cmd.py  record_cmd.py  summarize_cmd.py  transcribe_cmd.py
src/voxfusion/config/: __init__.py  defaults.yaml  loader.py  models.py
src/voxfusion/diarization/: __init__.py  alignment.py  base.py  channel.py  hybrid.py  pyannote_engine.py
src/voxfusion/gui/: __init__.py  helpers.py  main.py  model_summary.py  progress.py  runtime.py  theme.py
src/voxfusion/llm/: __init__.py  client.py  prompts.py
src/voxfusion/media/: __init__.py  extractor.py  ffmpeg.py
src/voxfusion/models/: __init__.py  audio.py  diarization.py  result.py  transcription.py  translation.py
src/voxfusion/output/: __init__.py  base.py  json_formatter.py  srt_formatter.py  txt_formatter.py  vtt_formatter.py
src/voxfusion/pipeline/: __init__.py  batch.py  events.py  orchestrator.py  streaming.py
src/voxfusion/preprocessing/: __init__.py  base.py  noise.py  normalize.py  pipeline.py  resample.py  vad.py
src/voxfusion/recording/: __init__.py  factory.py  recorder.py
src/voxfusion/security/: __init__.py  encryption.py  permissions.py
src/voxfusion/translation/: __init__.py  argos_engine.py  base.py  cache.py  deepl_engine.py  libretranslate.py  nllb_engine.py  registry.py
tests/: conftest.py
tests/integration/: test_all_models_e2e.py  test_gigaam_e2e.py  test_gui_smoke.py  test_realworld_e2e.py
tests/unit/: test_alignment.py  test_asr_catalog.py  test_audio_mixer.py  test_capture_cli.py  test_capture_factory.py  test_config.py  test_diarization.py  test_encryption.py  test_extra_asr_backends.py  test_ffmpeg_utils.py  test_gigaam_engine.py  test_gui_flow.py  test_llm_client.py  test_models.py  test_noise_reducer.py  test_output_formatters.py  test_preprocessing.py  test_recording.py  test_streaming_asr.py  test_translation_backends.py  test_translation_cache.py  test_windows_audio.py
